# Project_in_course

./: .gitignore  Project.ipynb
server/: generator.py  generator_small.py
server/server/: Cargo.toml
server/server/src/: main.rs
workspace/: bpe_tokenizer-merges.txt  bpe_tokenizer-vocab.json
workspace/checkpoints/: tune_vec_losses_ep0  vec_losses0  vec_losses1
